Add comprehensive AI Observability & Evaluation Framework
🎯 Features:
✅ TruLens integration with OpenTelemetry tracing
✅ RAG Triad metrics (Context Relevance, Groundedness, Answer Relevance)
✅ User feedback collection with 5-star rating system
✅ Real-time performance monitoring and analytics
✅ Batch evaluation on CUAD legal contracts dataset
✅ Snowsight-based evaluation dashboards

📊 Framework Components:
- Enhanced Streamlit app with evaluation capabilities
- TruLens instrumentation for all RAG components
- User feedback database with qualitative comments
- Evaluation test sets based on CUAD dataset
- Comprehensive documentation and setup guides

🔧 Technical Implementation:
- Conditional TruLens integration (graceful fallback)
- OpenTelemetry spans for detailed tracing
- LLM-as-a-judge evaluation methodology
- Snowflake AI Observability connector
- Real-time metrics display in sidebar

Based on: https://quickstarts.snowflake.com/guide/getting_started_with_ai_observability/

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,8 @@ altair>=5.0.0
 
 # For JSON processing (already included in Python 3.11+)
 # json is built-in, no additional package needed
+
+# TruLens AI Observability and Evaluation Framework
+trulens-core==1.5.2
+trulens-providers-cortex==1.5.2
+trulens-connectors-snowflake==1.5.2
